assets/css/index.css
img {
  max-width: 100%
}

input, textarea {
  max-width:100%
}


div, p, a, li, td{
  -webkit-text-size-adjust: none
}

.body{
  margin: 0;
  padding: 0;
  font-family: 'Assistant', sans-serif, 'arial';
  color: #222222;
  font-size: 100%;
  position: relative;
  min-width: 100%;
  background-color: white;
  max-width: 100%;
  height: 1000px;
  padding-bottom: 20px;
}

.contact-content{
  font-size: 120%;
  color: #222222;
  font-family: 'Assistant', sans-serif, arial;
  text-align: center;
  display: block;
  width: 40em;
  margin-left: auto;
  margin-right: auto;
  letter-spacing: 0px;
}

.photo{
  text-align: center;
}


.motion-container{
  margin: auto;
  width: 100%;
  font-family: 'Assistant', sans-serif, arial;
  color: #222222;
  min-width: 100%;
  text-align: center;
}

.fixed-nav-bar {
  position: fixed;
  top: 0;
  right: 0;
  z-index: 9999;
  width: 100%;
  height: 65px;
  background-color: #ffffff;
  font-family: 'Poiret One', sans-serif, arial;  
  text-align: center;
  font-size: 200%;
  letter-spacing: 2px;
  min-width: 100%;
  text-transform: uppercase;
  color: #46bfbd;
  padding-top: 10px;
  border-bottom: 1px solid #d3d3d3;
 }
 
.nav li{
display:inline;
}

.nav a{
text-decoration:none;
padding: 0 5px 0 0;
}

 
a:link, a:visited{
color: #ffffff;
background-color:auto;
text-decoration: none;
}

a:hover{
color:#46bfbd;
}

a:active{
color:#222222;
}


A.links2 {color:#222222;}
A.links2:link {text-decoration: none; color: #222222;}
A.links2:visited {text-decoration: none; color: #222222;}
A.links2:hover {text-decoration: none; color: #46bfbd;}
A.links2:active {text-decoration: none; color: #222222;}

A.links3 {color:#222222;}
A.links3:link {text-decoration: underline; color: #222222;}
A.links3:visited {text-decoration: none; color: #222222;}
A.links3:hover {text-decoration: none; color: #46bfbd;}
A.links3:active {text-decoration: none; color: #222222;}

A.links4 {color:#46bfbd;}
A.links4:link{text-decoration: none; color:#46bfbd;}
A.links4:visited{text-decoration:none; color:#46bfbd;}
A.links4:hover{text-decoration:none; color: #46bfbd;}
A.links4:active{text-decoration:none;color:#46bfbd;}


.index-header{
  margin: auto;
  min-width: 100%;  
  font-family: 'Poiret One', sans-serif, arial;
  font-size: 700%;
  color: #46bfbd;
  letter-spacing: 0px;
  text-align: center;
  margin-top: 3%;
  text-transform: uppercase;
}

.title{
  font-family: 'Poiret One', sans-serif, arial;
  font-size: 500%;
  color: #46bfbd;
  letter-spacing: 0px;
  text-align: center;
  text-transform: uppercase;
  margin-top: 3%;
}

.subtitlelinks{
  font-family: 'Assistant', sans-serif, arial;
  font-size: 90%;
  color: #222222;
  text-align: center;
  margin-right: 1%;
  text-transform: uppercase;
  min-width: 100%;
  width: 100%;
}


.terms{
  font-family: 'Assistant', sans-serif, arial;
  font-size: 120%;
  color: #222222;
  width: 80%;
  min-width: 80%;
  margin: auto;
  word-spacing: 2px;
  text-align: left;
}

.terms-subtitle{
  font-family: 'Assistant', sans-serif, arial;
  color: #222222;
  font-size: 90%;
  word-spacing: 3px;
  text-transform: uppercase;
  text-decoration: underline;
}



.core-values-title{
  font-family: 'Poiret One', sans-serif, arial;
  font-size: 500%;
  color: #46bfbd;
  letter-spacing: 5px;
  text-align: center;
  text-transform: uppercase;
  margin-top: 3%;
}


.booking{
  font-size: 120%;
  font-family: 'Assistant', sans-serif, arial;
  text-transform: none;
  text-align: center;

}

.rate-info{
  font-size: 150%;
  text-align: center;
  font-family: 'Assistant', sans-serif, arial;
  text-transform: uppercase;
}

.rates-title{
  font-family: 'Poiret One', sans-serif, arial;
  font-size: 700%;
  color: #46bfbd;
  letter-spacing: 5px;
  text-align: center;
  text-transform: uppercase;
  margin-top: 3%;
}

.subtitle{
  font-family: 'Poiret One', sans-serif, arial;
  font-size: 220%;
  color: #46bfbd;
  text-align: center;
  text-transform: uppercase;
}

.subtitle2{
  font-family: 'Assistant', sans-serif, arial;
  font-size: 160%;
  color: #222222;
  text-align: center;
  text-transform: uppercase;
  text-decoration: underline;
}

.caption{
  font-family: 'Assistant', sans-serif, arial;
  font-size: 120%;
  color: #222222;
  text-align: center;
  text-transform: uppercase;
}

.content{
  font-family: 'Assistant', sans-serif, arial;
  font-size: 120%;
  color: #222222;
  text-align: center;
  }


.archive{
  font-family: 'Assistant', sans-serif, arial;
  font-size: 100%;
  text-align: center;
  color: #222222;
}

.list-alignment{
  text-align: left;
}

.list-alignment2{
  text-align: center;
}

.post-names{
  font-size: 150%;
}

.privacy{
  font-family: 'Assistant', sans-serif, arial;
  font-size: 120%;
  color: #222222;
  width: 80%;
  min-width: 80%;
  margin: auto;
  word-spacing: 2px;
  text-align: left;
}

.privacy-subtitle{
  font-family: 'Assistant', sans-serif, arial;
  color: #222222;
  font-size: 90%;
  word-spacing: 3px;
  text-transform: uppercase;
  text-decoration: underline;
}

.livecaptureappreciate{
  font-family: 'Poiret One', sans-serif, arial;
  font-size: 160%;
  color: #46bfbd;
  text-align: center;
  text-transform: uppercase;
  word-spacing: 5px;
  margin-right: 1%;
  min-width: 10%;
}

.keliana-photography{
  font-family: 'Poiret One', sans-serif, arial;
  font-size: 200%;
  color: #222222;
  text-align: center;
  text-transform: uppercase;
  word-spacing: 5px;
  margin-right: 1%;
  min-width: 10%;
}

.footercontent{
  font-family: 'Assistant', sans-serif, arial;
  font-size: 130%;
  color: #222222;
  text-transform: uppercase;
  text-align: center;
  letter-spacing: 1px;
  background-color: #ffffff;
}

@import url(http://fonts.googleapis.com/css?family=Source+Sans+Pro|Open+Sans:300);

*, *:before, *:after { @include box-sizing(border-box) }

.script-container {
  margin: 2em 0;
  text-align: center;
}

ul.blog-post {
	list-style: none;
	font-size: 0px;
	margin-left: -2.5%;
}

ul.blog-post li {
	display: inline-block;
  border-radius: 3px;
	padding: 1.5em;
  width: 400px;
	margin: 0 0 2.5% 2.5%;
	background: #fff;
	border: 1px solid #eee;
	font-size: 16px;
	font-size: 1rem;
	vertical-align: top;
	box-shadow: 0 0 6px #eee;
	box-sizing: border-box;
	-moz-box-sizing: border-box;
	-webkit-box-sizing: border-box;
}

ul.blog-post li img {
	max-width: 100%;
	height: auto;
	margin: 0 0 10px;
}

ul.blog-post li h3 {
	margin: 0.6em 0 0.6em;
  text-align: left!important;
  font-family: Assistant, sans-serif, arial;
  color: #222222;
  font-size: 2em;
}

ul.blog-post li p {
  margin: 0.6em 0 1.3em;
	font-size: 1.5em;
	line-height: 1.5em;
	color: #8c8c8c;
  text-align: left!important;
  font-family: Assistant, sans-serif, arial;
  font-weight: 300;
}

.button {
  text-align: center;
  width: 20%;
  border: none;
  background: #46bfbd;
  font-family: Assistant, sans-serif, arial;
  font-weight: 300;
  font-size: 1em;
  color: white;
  border-radius: 5px;
  padding: 8px 10px 8px 10px;
}

.button:hover {
  opacity: 0.9;
  cursor: pointer;
}

ul.blog-post.columns-2 li {
	width: 37%;
}
 
@media (max-width: 480px) {
	ul.grid-nav li {
		display: block;
		margin: 0 0 5px;
	}
	ul.grid-nav li a {
		display: block;
	}
	ul.blog-post {
		margin-left: 0;
	}
	ul.blog-post li {
		width: 100% !important;
		margin: 0 0 20px;
	}
}

.button-archive {
  text-align: center;
  width: 10%;
  border: none;
  background: #46bfbd;
  font-family: Assistant, sans-serif, arial;
  font-weight: 300;
  font-size: 1.3em;
  color: white;
  border-radius: 5px;
  padding: 8px 15px 8px 15px;
  margin-top: 5%;
  display: inline-block;
}


.button-archive:hover {
  opacity: 0.9;
  cursor: pointer;
}


.button-older {
  text-align: center;
  width: 10%;
  border: none;
  background: #46bfbd;
  font-family: Assistant, sans-serif, arial;
  font-weight: 300;
  font-size: 1.3em;
  color: white;
  border-radius: 5px;
  padding: 8px 15px 8px 15px;
  margin-top: 5%;
  display: inline-block;
}

.button-older:hover {
  opacity: 0.9;
  cursor: pointer;
}

.button-newer {
  text-align: center;
  width: 10%;
  border: none;
  background: #46bfbd;
  font-family: Assistant, sans-serif, arial;
  font-weight: 300;
  font-size: 1.3em;
  color: white;
  border-radius: 5px;
  padding: 8px 15px 8px 15px;
  margin-top: 5%;
  margin-left: 35%;
  display: inline-block;
}

.button-newer:hover {
  opacity: 0.9;
  cursor: pointer;
}

.button-newer-2 {
  text-align: center;
  width: 10%;
  border: none;
  background: #46bfbd;
  font-family: Assistant, sans-serif, arial;
  font-weight: 300;
  font-size: 1.3em;
  color: white;
  border-radius: 5px;
  padding: 8px 15px 8px 15px;
  margin-top: 5%;
  margin-left: 40%;
  display: inline-block;
}

.button-newer-2:hover {
  opacity: 0.9;
  cursor: pointer;
}

.blog-content{
  font-size: 120%;
  color: #222222;
  font-family: 'Assistant', sans-serif, arial;
  text-align: center;
  display: block;
  width: 42em;
  margin-left: auto;
  margin-right: auto;
  letter-spacing: 0px;
}

.date-subtitle{
  font-size: 140%;
  color: #222222;
  font-family: Assistant, sans-serif, arial;
  text-align: center;
  text-transform: uppercase;
}

.blog-entry-title{
  font-size: 300%;
  color: #46bfbd;
  font-family: 'Poiret One', sans-serif, arial;
  text-align: center;
  text-transform: uppercase;
}

.photo-caption{
  font-size: 80%;
  color: #222222;
  font-family: Assistant, sans-serif, arial;
  text-align: center;
}

